[gd_scene load_steps=24 format=2]

[ext_resource path="res://Enemies+Allies/enemytrackstar/enemytrackstar3.png" type="Texture" id=1]
[ext_resource path="res://Enemies+Allies/enemytrackstar/enemytrackstar4.png" type="Texture" id=2]
[ext_resource path="res://Enemies+Allies/enemytrackstar/enemytrackstar2.png" type="Texture" id=3]
[ext_resource path="res://Enemies+Allies/enemytrackstar/enemytrackstar6.png" type="Texture" id=4]
[ext_resource path="res://Enemies+Allies/musclebot/MuscleBot.gd" type="Script" id=5]
[ext_resource path="res://Enemies+Allies/musclebot/musclebot5.png" type="Texture" id=6]
[ext_resource path="res://Collisions/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/explosion/explosion4.png" type="Texture" id=8]
[ext_resource path="res://Assets/explosion/explosion5.png" type="Texture" id=9]
[ext_resource path="res://Assets/explosion/explosion6.png" type="Texture" id=10]
[ext_resource path="res://Assets/explosion/explosion1.png" type="Texture" id=11]
[ext_resource path="res://Assets/explosion/explosion3.png" type="Texture" id=12]
[ext_resource path="res://Collisions/Hitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://AutoLoads/Stats.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enemies+Allies/Animations/Hit.tres" type="Animation" id=15]
[ext_resource path="res://Music/SoundAffects/HitBadGuy.tscn" type="PackedScene" id=16]
[ext_resource path="res://Music/SoundAffects/ExplosionSound.tscn" type="PackedScene" id=17]
[ext_resource path="res://Enemies+Allies/enemytrackstar/enemytrackstar1.png" type="Texture" id=18]
[ext_resource path="res://Enemies+Allies/enemytrackstar/enemytrackstar5.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 19 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "boom",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.56171, 8.46565 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.1117, 16.8319 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.6229, 16.5205 )

[node name="EnemyTrack" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 16
collision_mask = 99
script = ExtResource( 5 )
speed = 200

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.495003, -11.551 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 4
playing = true
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.483967, 2.18705 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 256

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.0686415, 2.43562 )
shape = SubResource( 3 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0.170181, 0.405825 )
scale = Vector2( 0.5, 0.5 )
enabled = true
collision_mask = 2

[node name="Timer" type="Timer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 13 )]
collision_mask = 128

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 3.28404 )
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 14 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = ExtResource( 15 )

[node name="HitBadGuy" parent="." instance=ExtResource( 16 )]

[node name="ExplosionSound" parent="." instance=ExtResource( 17 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
